smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-invalid-namespace.smithy
// Syntax error at line 6, column 6: Expected POUND('#') but found DOLLAR('$') | Model
$version: "2.0"

namespace smithy.example

use a$#Bar
